# pc

./: .gitignore  Cargo.toml  Makefile  README.md  justfile  rust-toolchain.toml
components/api-gateway/: Cargo.toml  wasmcloud.toml
components/api-gateway/.wash/: config.yaml
components/api-gateway/src/: bindings.rs  lib.rs
components/api-gateway/wit/: world.wit
components/event-store/: Cargo.toml  wasmcloud.toml
components/event-store/.wash/: config.yaml
components/event-store/src/: bindings.rs  lib.rs
components/event-store/wit/: world.wit
components/owner-aggregate/: Cargo.toml  wasmcloud.toml
components/owner-aggregate/.wash/: config.yaml
components/owner-aggregate/src/: bindings.rs  lib.rs
components/owner-aggregate/wit/: world.wit
components/owner-projector/: Cargo.toml  wasmcloud.toml
components/owner-projector/.wash/: config.yaml
components/owner-projector/src/: bindings.rs  lib.rs
components/owner-projector/wit/: world.wit
components/pet-aggregate/: Cargo.toml  wasmcloud.toml
components/pet-aggregate/.wash/: config.yaml
components/pet-aggregate/src/: bindings.rs  lib.rs
components/pet-aggregate/wit/: world.wit
components/pet-projector/: Cargo.toml  wasmcloud.toml
components/pet-projector/src/: lib.rs
components/pet-projector/wit/: world.wit
components/query-handler/: Cargo.toml  wasmcloud.toml
components/query-handler/.wash/: config.yaml
components/query-handler/src/: bindings.rs  lib.rs
components/query-handler/wit/: world.wit
components/ui-server/: Cargo.toml  wasmcloud.toml
components/ui-server/.wash/: config.yaml
components/ui-server/assets/: app.js  index.html
components/ui-server/src/: bindings.rs  lib.rs
components/ui-server/wit/: world.wit
components/vet-aggregate/: Cargo.toml  wasmcloud.toml
components/vet-aggregate/.wash/: config.yaml
components/vet-aggregate/src/: bindings.rs  lib.rs
components/vet-aggregate/wit/: world.wit
components/vet-projector/: Cargo.toml  wasmcloud.toml
components/vet-projector/.wash/: config.yaml
components/vet-projector/src/: bindings.rs  lib.rs
components/vet-projector/wit/: world.wit
deploy/: compose.yaml  wadm.yaml
deploy/k8s/: 01-nats.yaml  02-registry.yaml  03-wadm.yaml  04-host.yaml
wit/petclinic-aggregate/: owner.wit  pet.wit  vet.wit
wit/petclinic-commands/: owner.wit  pet.wit  vet.wit
wit/petclinic-domain/: types.wit
wit/petclinic-events/: owner.wit  pet.wit  vet.wit
wit/petclinic-gateway/: api.wit
wit/petclinic-owner-aggregate/: owner.wit
wit/petclinic-pet-aggregate/: pet.wit
wit/petclinic-store/: event-store.wit
wit/petclinic-vet-aggregate/: vet.wit
wit/petclinic-views/: owner-profile.wit  pet-profile.wit  vet-schedule.wit
