[workspace]
resolver = "2"
members = [
    "components/api-gateway",
    "components/owner-aggregate",
    "components/pet-aggregate",
    "components/vet-aggregate",
    "components/event-store",
    "components/owner-projector",
    "components/vet-projector",
    "components/query-handler",
    "components/ui-server",
]

[workspace.dependencies]
wit-bindgen    = "0.41.0"
wit-bindgen-rt = "0.41.0"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
uuid           = { version = "1.11", features = ["v7"] }
sha2           = "0.10"
hmac           = "0.12"

[profile.release]
opt-level     = "z"
lto           = true
strip         = true
codegen-units = 1
panic         = "abort"
