[package]
name    = "ui-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen    = { workspace = true }
wit-bindgen-rt = { workspace = true }
serde_json     = { workspace = true }

[package.metadata.component]
package = "petclinic:ui-server"

[package.metadata.component.target]
path  = "wit"
world = "ui-server"

[package.metadata.component.target.dependencies]
"wasi:http"    = { path = "../../wit/deps/wasi-http-0.2.0" }
"wasi:logging" = { path = "../../wit/deps/wasi-logging" }
"wasi:io"      = { path = "../../wit/deps/wasi-io-0.2.0" }
"wasi:random"  = { path = "../../wit/deps/wasi-random-0.2.0" }
"wasi:cli"     = { path = "../../wit/deps/wasi-cli-0.2.0" }
"wasi:clocks"  = { path = "../../wit/deps/wasi-clocks-0.2.0" }
